--- a/demo/src/app/examples/language/language-demo.component.html
+++ b/demo/src/app/examples/language/language-demo.component.html
@@ -1,6 +1,7 @@
 <recaptcha-demo-wrapper>
   <re-captcha
     (resolved)="resolved($event)"
+    [lang]="lang"
     siteKey="6LcOuyYTAAAAAHTjFuqhA52fmfJ_j5iFk5PsfXaU"
   ></re-captcha>
 </recaptcha-demo-wrapper>
